force-app/main/default/objects/Deployment_Request__c/Deployment_Request__c.object-meta.xml
<CustomObject>
    <description>This object Create Request for Deployment.</description>
    <label>Deployment Request</label>
    <nameField>
        <displayFormat>DR-{0000}</displayFormat>
        <label>Deployment Request Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Deployment Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>