force-app/main/default/objects/Deployment_Request__c/fields/All_Tasks_Completed__c.field-meta.xml
<CustomField>
    <fullName>All_Tasks_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field used for check whether all related Deployment Tasks for the same Deployment Request are complete.</description>
    <label>All Tasks Completed</label>
    <type>Checkbox</type>
</CustomField>