force-app/main/default/objects/Deployment_Request__c/fields/Approver__c.field-meta.xml
<CustomField>
    <fullName>Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field used for Submitted for Approval.</description>
    <label>Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Deployment_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>