force-app/main/default/objects/Deployment_Request__c/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <description>This field Used for Deployment Request.</description>
    <label>Comments</label>
    <type>TextArea</type>
</CustomField>