force-app/main/default/objects/Deployment_Request__c/fields/Deployment_Date__c.field-meta.xml
<CustomField>
    <fullName>Deployment_Date__c</fullName>
    <description>This used for Deployment Request Object.</description>
    <label>Deployment Date</label>
    <type>Date</type>
</CustomField>