force-app/main/default/objects/Deployment_Request__c/fields/Requested_By__c.field-meta.xml
<CustomField>
    <fullName>Requested_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field used for Deployment Request Object.</description>
    <label>Requested By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Deployment_Requests1</relationshipName>
    <type>Lookup</type>
</CustomField>