force-app/main/default/objects/Deployment_Request__c/fields/VR_Status_Automation_Bypass__c.field-meta.xml
<CustomField>
    <fullName>VR_Status_Automation_Bypass__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Restrict_Status_By_Role for this VR bypass</description>
    <label>VR Status Automation Bypass</label>
    <type>Checkbox</type>
</CustomField>