force-app/main/default/objects/Deployment_Request__c/recordTypes/Development_Release.recordType-meta.xml
<RecordType>
    <fullName>Development_Release</fullName>
    <active>true</active>
    <description>This record Type Used for Development Release</description>
    <label>Development Release</label>
</RecordType>