force-app/main/default/objects/Deployment_Request__c/recordTypes/Emergency_Release.recordType-meta.xml
<RecordType>
    <fullName>Emergency_Release</fullName>
    <active>true</active>
    <description>This record Type Used for Emergency Deployment</description>
    <label>Emergency Release</label>
</RecordType>