force-app/main/default/objects/Deployment_Request__c/recordTypes/Production_Release.recordType-meta.xml
<RecordType>
    <fullName>Production_Release</fullName>
    <active>true</active>
    <description>This record Type Used for Standard Deployment</description>
    <label>Production Release</label>
</RecordType>