force-app/main/default/objects/Deployment_Request__c/validationRules/Prevent_Submit_When_Tasks_Incomplete.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Submit_When_Tasks_Incomplete</fullName>
    <active>true</active>
    <description>Prevents users from submitting a Deployment Request until all Deployment Tasks are completed.
Formula</description>
    <errorConditionFormula>AND(
ISPICKVAL(Status__c, &quot;Submitted&quot;),
NOT(All_Tasks_Completed__c)
)</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>Complete all Deployment Tasks before submitting the Deployment Request.</errorMessage>
</ValidationRule>